fix: change overflow to hidden

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 .App {
   background-color: black;
+  position: relative;
+  height: 100%;
 }
