--- a/src/components/keyboard/Keyboard.css
+++ b/src/components/keyboard/Keyboard.css
@@ -16,7 +16,7 @@
 	justify-content: center;
 	align-items: center;
 	display: flex;
-	overflow: visible;
+	overflow: hidden;
 	flex: 1;
 	margin-right: 3px;
 	user-select: none;
